# proscenium

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/iroh-social-types/: Cargo.toml
crates/iroh-social-types/src/: delegation.rs  dm.rs  lib.rs  protocol.rs  registration.rs  signing.rs  stage.rs  types.rs
crates/proscenium-types/: Cargo.toml
crates/proscenium-types/src/: delegation.rs  dm.rs  protocol.rs  stage.rs  types.rs  validation.rs
docs/: audio-device-switching.md  dm-key-split-plan.md  ideas.md  iroh-llms.txt  linked-devices.md  spaces-design.md  svelte-llms-small.txt  tauri-llms.txt
llms/: tauri-llms-full.txt
scripts/: deploy-server.sh
server/: Cargo.toml
server/migrations/: 001_initial.sql  002_delegations.sql  003_peer_device_announcements.sql
server/src/: config.rs  ingestion.rs  main.rs  node.rs  storage.rs  trending.rs
server/src/api/: auth.rs  feed.rs  mod.rs  posts.rs  server_info.rs  trending.rs  users.rs
server/src/web/: layout.rs  mod.rs  pages.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_profiles.sql  002_peer_delegations.sql  003_linked_devices.sql  004_social_graph.sql  005_content.sql  006_notifications.sql  007_direct_messages.sql  008_bookmarks.sql  010_push_outbox.sql  010_visibility.sql  011_preferences.sql  011_push_outbox.sql  012_follow_requests.sql  013_servers.sql  014_peer_delegations.sql  015_profile_signature.sql  016_linked_devices.sql
src-tauri/src/: constants.rs  crypto.rs  device_sync.rs  dm.rs  error.rs  ext.rs  framing.rs  gossip.rs  ingest.rs  lib.rs  main.rs  og.rs  opengraph.rs  peer.rs  preferences.rs  push.rs  setup.rs  state.rs  sync.rs  util.rs
src-tauri/src/audio/: aec.rs  android.rs  capture.rs  codec.rs  mod.rs  playback.rs  transport.rs
src-tauri/src/call/: audio.rs  codec.rs  initiator.rs  mod.rs  responder.rs  state.rs  termination.rs  transport.rs
src-tauri/src/commands/: blobs.rs  calls.rs  devices.rs  dm.rs  follow_requests.rs  identity.rs  interactions.rs  mod.rs  moderation.rs  notifications.rs  posts.rs  preferences.rs  profile.rs  servers.rs  social.rs  stage.rs  sync.rs
src-tauri/src/crypto/: keys.rs  mod.rs  noise.rs  ratchet.rs  tests.rs
src-tauri/src/dm/: crypto.rs  delivery.rs  handshake.rs  incoming.rs  mod.rs
src-tauri/src/gossip/: broadcast.rs  handlers.rs  health.rs  mod.rs  own_feed.rs  subscriptions.rs
src-tauri/src/peer/: client.rs  follow_protocol.rs  linking.rs  list_sharing.rs  mod.rs
src-tauri/src/stage/: auth.rs  command.rs  control.rs  control_handler.rs  fanout.rs  lifecycle.rs  mixer.rs  mod.rs  moderation.rs  pipeline.rs  relay.rs  speaker_mixer.rs  state.rs  topology.rs
src-tauri/src/storage/: crypto.rs  device_sync.rs  follow_requests.rs  interactions.rs  linked_devices.rs  messaging.rs  mod.rs  moderation.rs  notifications.rs  peer_delegations.rs  posts.rs  preferences.rs  profiles.rs  push.rs  ratchet.rs  servers.rs  social.rs  tests.rs
src-tauri/src/sync/: client.rs  mod.rs  orchestration.rs  processing.rs  server.rs
src-tauri/src/tasks/: device_sync.rs  dm_outbox.rs  housekeeping.rs  mod.rs  network.rs  peer_sync.rs  push_outbox.rs  sync.rs
src/lib/: AudioDeviceSelect.svelte  BottomNav.svelte  CallOverlay.svelte  DeleteConfirmModal.svelte  Icon.svelte  Lightbox.svelte  LinkPreviewCard.svelte  LinkQrModal.svelte  LinkScannerModal.svelte  MediaGrid.svelte  MentionAutocomplete.svelte  MessageComposer.svelte  MobileHeader.svelte  PersonItem.svelte  PostCard.svelte  PostComposer.svelte  PostFeed.svelte  ProfileEditor.svelte  QrModal.svelte  QuoteComposer.svelte  QuotedPostEmbed.svelte  ReplyComposer.svelte  ReplyContextBlock.svelte  RightSidebar.svelte  ScannerModal.svelte  Sidebar.svelte  StageCard.svelte  accent.ts  blobs.ts  composables.svelte.ts  context-menu.ts  types.ts  utils.ts
src/lib/composables/: autogrow.svelte.ts  index.ts  useCopyFeedback.svelte.ts  useDeleteConfirm.svelte.ts  useEventListeners.svelte.ts  useFileUpload.svelte.ts  useInfiniteScroll.svelte.ts  useLightbox.svelte.ts  useMentionAutocomplete.svelte.ts  useNodeInit.svelte.ts  usePullToRefresh.svelte.ts  useToast.svelte.ts
src/lib/discover/: DiscoverSearchBar.svelte  PostResultsList.svelte  ServerSelector.svelte  TrendingList.svelte  UserResultsList.svelte
src/lib/messages/: ChatHeader.svelte  MessageBubble.svelte  MessageMedia.svelte  TypingIndicator.svelte
src/lib/preferences/: AccentPicker.svelte  DangerZoneSection.svelte  PrivacyToggles.svelte  SecuritySection.svelte  ServerManagement.svelte
src/lib/profile/: MediaFilterBar.svelte  ProfileActions.svelte  ProfileHeaderCard.svelte  ProfileIdSection.svelte  SocialGraphAccordion.svelte
src/lib/stage/: FloatingReactions.svelte  ParticipantPopover.svelte  StageChat.svelte  StageControlBar.svelte  StageLanding.svelte
src/lib/welcome/: ProfileSetupForm.svelte  RecoveryForm.svelte  SeedPhraseDisplay.svelte  SeedVerification.svelte  WelcomeIntro.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/activity/: +page.svelte
src/routes/discover/: +page.svelte
src/routes/follows/: +page.svelte
src/routes/messages/: +page.svelte
src/routes/messages/[pubkey]/: +page.svelte
src/routes/post/[id]/: +page.svelte
src/routes/preferences/: +page.svelte
src/routes/preferences/devices/: +page.svelte
src/routes/profile/[pubkey]/: +page.svelte
src/routes/servers/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/settings/devices/: +page.svelte
src/routes/stage/: +page.svelte
src/routes/welcome/: +page.svelte
todos/: community-server.md  linked-devices.md
