[package]
name = "iroh-social-server"
version = "0.1.40"
edition = "2024"

[[bin]]
name = "iroh-social-server"
path = "src/main.rs"

[dependencies]
iroh-social-types = { path = "../crates/iroh-social-types" }
iroh = "0.96"
iroh-gossip = "0.96"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures-lite = "2"
log = "0.4"
getrandom = "0.3"
maud = { version = "0.26", features = ["axum"] }
regex = "1"
