[package]
name = "proscenium-server"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "proscenium-server"
path = "src/main.rs"

[dependencies]
proscenium-types = { path = "../crates/proscenium-types" }
iroh = "0.97.0"
iroh-gossip = "0.97.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures-lite = "2"
log = "0.4"
getrandom = "0.3"
maud = { version = "0.26", features = ["axum"] }
regex = "1"
