[package]
name = "proscenium"
version.workspace = true
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "proscenium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aec3 = "0.1.7"
base64 = "0.22"
bip39 = { version = "2", features = ["zeroize"] }
bytes = "1"
chacha20poly1305 = "0.10"
cpal = "0.17"
curve25519-dalek = { version = "4", default-features = false }
futures-lite = "2"
getrandom = "0.4.1"
hex = "0.4.3"
hkdf = "0.12"
iroh = { version = "0.97.0", features = ["address-lookup-mdns", "address-lookup-pkarr-dht"] }
iroh-blobs = { version = "0.99.0", features = ["fs-store"] }
iroh-gossip = { workspace = true }
log = "0.4"
mime_guess = "2.0.5"
opus = "0.3"
png = "0.18.1"
proscenium-types = { path = "../crates/proscenium-types" }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
ringbuf = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snow = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
urlencoding = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-haptics = "2"
